Add 24.2 NEWS section (do not merge to trunk)

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -15,6 +15,11 @@ You can narrow news to a specific version by calling `view-emacs-news'
 with a prefix argument or by typing C-u C-h C-n.
 
 
+* Changes in Emacs 24.2
+
+** This is mainly a bug-fix release.
+
+
 * Installation Changes in Emacs 24.1
 
 ** Emacs can be compiled with Gtk+ 3.0 if you pass --with-x-toolkit=gtk3
