--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-16  Phil Sainty  <psainty@orcon.net.nz>  (tiny change)
+
+	* progmodes/subword.el (subword-forward-function)
+	(subword-backward-function, subword-forward-regexp)
+	(subword-backward-regexp): New variables.
+	(subword-forward, subword-forward-internal, subword-backward-internal):
+	Use new variables, eg so that different "word" definitions
+	can be easily used.  (Bug#11411)
+
 2012-08-15  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc/vc-mtn.el (vc-mtn-revision-completion-table): Handle completion
