--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-08-16  Chong Yidong  <cyd@gnu.org>
 
+	* gtkutil.c (xg_get_font): Demand an Xft font (Bug#3228).
+
 	* xfont.c (xfont_open):
 	* xftfont.c (xftfont_open): Set the font's max_width field.
 
