--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,6 +1,22 @@
 2012-08-16  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (window-valid-p): Move to window.c.
+	(window-child, window-child-count, window-last-child)
+	(window-normalize-window, window-combined-p)
+	(window-combinations, window-atom-root, window-min-size)
+	(window-sizable, window-sizable-p, window-size-fixed-p)
+	(window-min-delta, window-max-delta, window--resizable)
+	(window--resizable-p, window-resizable, window-total-size)
+	(window-full-height-p, window-full-width-p, window-body-size)
+	(window-at-side-p, adjust-window-trailing-edge, maximize-window)
+	(minimize-window, window-deletable-p, delete-window)
+	(delete-other-windows, set-window-buffer-start-and-point)
+	(next-buffer, previous-buffer, split-window, balance-windows-2)
+	(set-window-text-height, window-buffer-height)
+	(fit-window-to-buffer, shrink-window-if-larger-than-buffer)
+	(truncated-partial-width-window-p): Minor code adjustments.  In
+	doc-strings state whether the argument window has to denote a
+	live, valid or any window.
 
 2012-08-16  Phil Sainty  <psainty@orcon.net.nz>  (tiny change)
 
