Use ASCII tests for character types.
* admin/merge-gnulib (GNULIB_MODULES): Add c-ctype.
* lwlib/lwlib-Xaw.c, lwlib/lwlib.c, lwlib/xlwmenu.c:
Don't include <ctype.h>; no longer needed.
* lwlib/lwlib-Xaw.c (openFont):
* lwlib/xlwmenu.c (openXftFont): Test just for ASCII digits.
* src/category.c, src/dispnew.c, src/doprnt.c, src/editfns.c, src/syntax.c
* src/term.c, src/xfns.c, src/xterm.c:
Don't include <ctype.h>; was not needed.
* src/charset.c, src/doc.c, src/fileio.c, src/font.c, src/frame.c:
* src/gtkutil.c, src/image.c, src/sysdep.c, src/xfaces.c:
Include <c-ctype.h> instead of <ctype.h>.
* src/nsterm.m: Include <c-ctype.h>.
* src/charset.c (read_hex):
* src/doc.c (Fsnarf_documentation):
* src/fileio.c (IS_DRIVE) [WINDOWSNT]:
(DRIVE_LETTER) [DOS_NT]:
(Ffile_name_directory, Fexpand_file_name)
(Fsubstitute_in_file_name):
* src/font.c (font_parse_xlfd, font_parse_fcname):
* src/frame.c (x_set_font_backend):
* src/gtkutil.c (xg_get_font):
* src/image.c (xbm_scan, xpm_scan, pbm_scan_number):
* src/nsimage.m (hexchar):
* src/nsterm.m (ns_xlfd_to_fontname):
* src/sysdep.c (system_process_attributes):
* src/xfaces.c (hash_string_case_insensitive):
Use C-locale tests instead of locale-specific tests for character
types, since we want the ASCII interpretation here, not the
interpretation suitable for whatever happens to be the current locale.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,31 @@
+2012-08-16  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Use ASCII tests for character types.
+	* category.c, dispnew.c, doprnt.c, editfns.c, syntax.c, term.c:
+	* xfns.c, xterm.c:
+	Don't include <ctype.h>; was not needed.
+	* charset.c, doc.c, fileio.c, font.c, frame.c, gtkutil.c, image.c:
+	* sysdep.c, xfaces.c:
+	Include <c-ctype.h> instead of <ctype.h>.
+	* nsterm.m: Include <c-ctype.h>.
+	* charset.c (read_hex):
+	* doc.c (Fsnarf_documentation):
+	* fileio.c (IS_DRIVE) [WINDOWSNT]:
+	(DRIVE_LETTER) [DOS_NT]:
+	(Ffile_name_directory, Fexpand_file_name)
+	(Fsubstitute_in_file_name):
+	* font.c (font_parse_xlfd, font_parse_fcname):
+	* frame.c (x_set_font_backend):
+	* gtkutil.c (xg_get_font):
+	* image.c (xbm_scan, xpm_scan, pbm_scan_number):
+	* nsimage.m (hexchar):
+	* nsterm.m (ns_xlfd_to_fontname):
+	* sysdep.c (system_process_attributes):
+	* xfaces.c (hash_string_case_insensitive):
+	Use C-locale tests instead of locale-specific tests for character
+	types, since we want the ASCII interpretation here, not the
+	interpretation suitable for whatever happens to be the current locale.
+
 2012-08-16  Martin Rudalics  <rudalics@gmx.at>
 
 	Consistently check windows for validity/liveness
