--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-17  Alp Aker  <alp.tekin.aker@gmail.com>
+
+	* nsfont.m (ns_ascii_average_width): Send initWithFormat selector
+	to an allocated instance of NSString, not to the class itself.
+
 2012-08-17  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (C_CTYPE_H): New macro.
