--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-17  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (delete-window): Fix last fix.
+
 2012-08-16  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (window-valid-p): Move to window.c.
