Allow face-remapping using :font, and use it in mouse-appearance-menu.
* mouse.el (mouse-appearance-menu): If x-select-font returns a
font spec, set the font directly.

* xfaces.c (merge_face_vectors): If the target font specfies a
font spec, make the font's attributes take precedence over
directly-specified attributes.
(merge_face_ref): Recognize :font.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-17  Chong Yidong  <cyd@gnu.org>
+
+	* mouse.el (mouse-appearance-menu): If x-select-font returns a
+	font spec, set the font directly (Bug#3228).
+
 2012-08-17  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (delete-window): Fix last fix.
