--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,38 @@
 2012-08-18  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* buffer.h (BSET): Remove (Bug#12215).
+	Replace all uses with calls to new setter functions.
+	(bset_bidi_paragraph_direction, bset_case_canon_table)
+	(bset_case_eqv_table, bset_directory, bset_display_count)
+	(bset_display_time, bset_downcase_table)
+	(bset_enable_multibyte_characters, bset_filename, bset_keymap)
+	(bset_last_selected_window, bset_local_var_alist)
+	(bset_mark_active, bset_point_before_scroll, bset_read_only)
+	(bset_truncate_lines, bset_undo_list, bset_upcase_table)
+	(bset_width_table):
+	* buffer.c (bset_abbrev_mode, bset_abbrev_table)
+	(bset_auto_fill_function, bset_auto_save_file_format)
+	(bset_auto_save_file_name, bset_backed_up, bset_begv_marker)
+	(bset_bidi_display_reordering, bset_buffer_file_coding_system)
+	(bset_cache_long_line_scans, bset_case_fold_search)
+	(bset_ctl_arrow, bset_cursor_in_non_selected_windows)
+	(bset_cursor_type, bset_display_table, bset_extra_line_spacing)
+	(bset_file_format, bset_file_truename, bset_fringe_cursor_alist)
+	(bset_fringe_indicator_alist, bset_fringes_outside_margins)
+	(bset_header_line_format, bset_indicate_buffer_boundaries)
+	(bset_indicate_empty_lines, bset_invisibility_spec)
+	(bset_left_fringe_width, bset_major_mode, bset_mark)
+	(bset_minor_modes, bset_mode_line_format, bset_mode_name)
+	(bset_name, bset_overwrite_mode, bset_pt_marker)
+	(bset_right_fringe_width, bset_save_length)
+	(bset_scroll_bar_width, bset_scroll_down_aggressively)
+	(bset_scroll_up_aggressively, bset_selective_display)
+	(bset_selective_display_ellipses, bset_vertical_scroll_bar_type)
+	(bset_word_wrap, bset_zv_marker):
+	* category.c (bset_category_table):
+	* syntax.c (bset_syntax_table):
+	New setter functions.
+
 	* process.h (PSET): Remove (Bug#12215).
 	Replace all uses with calls to new setter functions.
 	Use INLINE_HEADER_BEGIN, INLINE_HEADER_END.
