Make display strings obey buffer-invisibility-spec.
* src/xdisp.c (handle_invisible_prop): Obey TEXT_PROP_MEANS_INVISIBLE
for the string case.

* redisplay-testsuite.el (test-redisplay-4): New test.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-18  Chong Yidong  <cyd@gnu.org>
+
+	* xdisp.c (handle_invisible_prop): Obey TEXT_PROP_MEANS_INVISIBLE
+	for the string case (Bug#3874).
+
 2012-08-18  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* buffer.h (BSET): Remove (Bug#12215).
