--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-18  Paul Eggert  <eggert@cs.ucla.edu>
+
+	port new setting code to Sun C 5.8 2005/10/13
+	* chartab.c, lisp.h (char_table_set, char_table_set_range):
+	Return void, not Lisp_Object.  Otherwise, the compiler
+	complains about (A?B:C) where B is void and C is Lisp_Object
+	when compiling CHAR_TABLE_SET, due to the recent change to
+	the API of sub_char_table_set_contents.
+
 2012-08-18  Chong Yidong  <cyd@gnu.org>
 
 	* xdisp.c (handle_invisible_prop): Obey TEXT_PROP_MEANS_INVISIBLE
