--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-19  Chong Yidong  <cyd@gnu.org>
+
+	* xml.el (xml-escape-string): Don't refer to xml-entity-alist
+	(Bug#12228).
+
 2012-08-18  Chong Yidong  <cyd@gnu.org>
 
 	* simple.el (yank-handled-properties): New defcustom.
