--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Rely on <unistd.h> to declare 'environ'.
+	* emacsclient.c (environ): Remove decl.
+
 2012-08-17  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/regex.$(O)): Update dependencies.
