--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-20  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/vm-limit.$(O)): Update dependencies.
+
 2012-08-19  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Rely on <unistd.h> to declare 'environ',
